--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+  <meta name="google-site-verification" content="BsvoP6LUCPFeis0lndEbfbOI3bBe9ozW1HP3n1WrYDQ" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>DV Photo Checker - فحص الصور للوتري الأمريكي</title>
