--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta name="google-site-verification" content="BsvoP6LUCPFeis0lndEbfbOI3bBe9ozW1HP3n1WrYDQ" />
+  
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>DV Photo Checker - فحص الصور للوتري الأمريكي</title>
+  <title>DV Photo Checker - فحص الصور الخاصة بالقرعة العشوائية الأمريكية اللوتري</title>
 
   <!-- SEO -->
-  <meta name="description" content="أداة مجانية لفحص الصور وفق متطلبات اللوتري الأمريكي (DV Lottery) مع نتائج دقيقة وسريعة.">
-  <meta name="keywords" content="DV Lottery, فحص الصور, اللوتري الأمريكي, صورة القرعة, DV Photo Checker">
+  <meta name="description" content="أداة مجانية لفحص الصور وفق متطلبات القرعة العشوائية اللوتري الأمريكي (DV Lottery) مع نتائج دقيقة وسريعة.">
+  <meta name="keywords" content="DV Lottery, فحص الصور, اللوتري الأمريكي, صورة القرعة, DV Photo Checker,الهجرة,القرعة الامريكية,السفر,فيزا,سياحة,دراسة,visa,usa,study,">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="DV Photo Checker">
   <meta property="og:description" content="أداة مجانية لفحص الصور وفق معايير اللوتري الأمريكي.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="path/to/social-share-image.png"> <!-- ضع صورة مشاركة هنا -->
-  <meta property="og:url" content="https://yourwebsite.com"> <!-- ضع رابط موقعك هنا -->
+  <meta property="og:url" content="https://dvchcker.github.io/dv-photo-checker"> <!-- ضع رابط موقعك هنا -->
 
   <!-- مكتبات -->
   <script src="face-api.min.js"></script>
