--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>DV Photo Checker - فحص الصور الخاصة بالقرعة العشوائية الأمريكية اللوتري</title>
 
   <!-- SEO -->
-  <meta name="description" content="أداة مجانية لفحص الصور وفق متطلبات القرعة العشوائية اللوتري الأمريكي (DV Lottery) مع نتائج دقيقة وسريعة.">
-  <meta name="keywords" content="DV Lottery, فحص الصور, اللوتري الأمريكي, صورة القرعة, DV Photo Checker,الهجرة,القرعة الامريكية,السفر,فيزا,سياحة,دراسة,visa,usa,study,">
+  <meta name="description" content="أداة مجانية لفحص الصور وفق متطلبات القرعة العشوائية اللوتري الأمريكي (DV Lottery, Green Card) مع نتائج دقيقة وسريعة.">
+  <meta name="keywords" content="DV Lottery, فحص الصور, اللوتري الأمريكي, صورة القرعة, DV Photo Checker,الهجرة,القرعة الامريكية,السفر,فيزا,سياحة,دراسة,visa,usa,study, green card">
   <meta name="robots" content="index, follow">
   <meta property="og:title" content="DV Photo Checker">
   <meta property="og:description" content="أداة مجانية لفحص الصور وفق معايير اللوتري الأمريكي.">
